Details
-
Bug
-
Resolution: Fixed
-
Not Evaluated
-
Qt Creator 10.0.2
-
None
-
-
d9a8eba35 (master)
Description
Formatting CMakeLists.txt fails without any error message when the cmake-format tool is not set in Qt Creator preferences. The menu item is enabled, but nothing happens when it is executed.
Steps:
- Open any CMakeLists.txt file.
- Tools --> CMakeFormatter --> Format current file.
The cmake-format command setting is red in Preferences --> CMake. It is not immediately obvious to a user how to install this on Windows
Installing Python and doing pip install cmake-format automatically fixes the issue.
Putting the tool in the Qt directory or Qt Creator directory during installation seems much simpler. Currently users have to go through the instructions here and manually install the tool.
Attachments
For Gerrit Dashboard: QTCREATORBUG-29415 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
490675,8 | CMakePM: Enable cmake format action only if the tool is present | master | qt-creator/qt-creator | Status: MERGED | +2 | 0 |