CMakePM: Enable cmake format action only if the tool is present

If the tool is not present the menu action is disabled.
Also add a link to the Qt Creator cmake-format documentation.

Fixes: QTCREATORBUG-29415
Change-Id: I4afb33f0d5ce08975b0964d6bee80dfb41cfcde5
Reviewed-by: <github-actions-qt-creator@cristianadam.eu>
Reviewed-by: Eike Ziller <eike.ziller@qt.io>